--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
 		"@sveltejs/adapter-auto": "^6.0.0",
-		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@sveltejs/kit": "^2.21.1",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@tailwindcss/postcss": "^4.1.7",
+		"@types/qrcode": "^1.5.5",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
 		"globals": "^16.0.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
-		"svelte": "^5.0.0",
+		"prettier-plugin-tailwindcss": "^0.6.5",
+		"svelte": "^5.30.2",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
@@ -36,6 +39,12 @@
 		"@supabase/supabase-js": "^2.49.4",
 		"bad-words": "^4.0.0",
 		"canvas-confetti": "^1.9.3",
+		"leo-profanity": "^1.7.0",
+		"lucide-svelte": "^0.510.0",
+		"normalize.css": "^8.0.1",
+		"qrcode": "^1.5.4",
+		"svelte-motion": "^0.12.2",
+		"svelte-sonner": "^1.0.1",
 		"uuid": "^11.1.0"
 	}
 }
