--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
 		"vite-plugin-commonjs": "^0.10.4"
 	},
 	"dependencies": {
+		"@stripe/stripe-js": "^7.3.1",
+		"@supabase/ssr": "^0.6.1",
 		"@supabase/supabase-js": "^2.49.4",
 		"bad-words": "^4.0.0",
 		"canvas-confetti": "^1.9.3",
@@ -44,6 +46,7 @@
 		"lucide-svelte": "^0.510.0",
 		"normalize.css": "^8.0.1",
 		"qrcode": "^1.5.4",
+		"stripe": "^18.1.1",
 		"svelte-motion": "^0.12.2",
 		"svelte-sonner": "^1.0.1",
 		"uuid": "^11.1.0"
