--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/postcss": "^4.1.7",
 		"@types/qrcode": "^1.5.5",
-		"@types/stripe": "^8.0.416",
 		"dotenv": "^16.5.0",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
@@ -30,6 +29,7 @@
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.5",
+		"supabase": "^2.23.4",
 		"svelte": "^5.30.2",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
