--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.8",
 		"@types/qrcode": "^1.5.5",
-		"@vitest/coverage-c8": "^0.33.0",
+		"@vitest/coverage-v8": "^3.1.4",
 		"@vitest/ui": "^3.1.4",
 		"dotenv": "^16.5.0",
 		"eslint": "^9.18.0",
