feat: implement email verification flow and auth state handling

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"test": "vitest run",
 		"test:watch": "vitest",
 		"test:ui": "vitest --ui",
-		"test:coverage": "vitest run --coverage"
+		"test:coverage": "vitest run --coverage",
+		"generate-types": "supabase gen types typescript --project-id xkqioergzocysebvrhcs > src/lib/database.types.ts"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
