--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"stripe": "^18.2.0",
 		"svelte-motion": "^0.12.2",
 		"svelte-sonner": "^1.0.1",
-		"uuid": "^11.1.0"
+		"uuid": "^11.1.0",
+		"zod": "^3.25.51"
 	}
 }
