--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
 		"@stripe/stripe-js": "^7.3.1",
 		"@supabase/ssr": "^0.6.1",
 		"@supabase/supabase-js": "^2.49.4",
+		"@svelte-plugins/datepicker": "^1.0.11",
 		"bad-words": "^4.0.0",
 		"canvas-confetti": "^1.9.3",
+		"date-fns": "^4.1.0",
 		"leo-profanity": "^1.7.0",
 		"lucide-svelte": "0.510.0",
 		"normalize.css": "^8.0.1",
@@ -62,6 +64,7 @@
 		"stripe": "^18.2.0",
 		"svelte-motion": "^0.12.2",
 		"svelte-sonner": "^1.0.1",
+		"tippy.js": "^6.3.7",
 		"uuid": "^11.1.0",
 		"zod": "^3.25.51"
 	}
