feat: add leaderboard functionality and update configurations
- Add new leaderboard utilities and Supabase functions
- Update environment configurations and type definitions
- Add deployment documentation
- Update package dependencies

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
 # Environment variables are managed in Supabase dashboard
 # Email sending is handled by Resend's Supabase integration
+
+# Leaderboard Configuration
+# Generate a secure random string for the leaderboard API key
+# You can generate one with: openssl rand -base64 32
+PUBLIC_LEADERBOARD_API_KEY=your_secure_api_key_here
+
+# For Edge Function (set in Supabase Dashboard)
+LEADERBOARD_API_KEYS=key1,key2  # Comma-separated list of valid API keys
